--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -1,5 +1,5 @@
-{% extends "layout.html" %} 
-{% block title %}To-Do App{% endblock %} 
+{% extends "layout.html" %}
+{% block title %}To-Do App{% endblock %}
 
 {% block content %}
 <div class="jumbotron">
@@ -7,12 +7,19 @@
   <p class="lead">Just another to-do app.</p>
 </div>
 
+<div>
+  <form action="{{url_for('add')}}" method="POST">
+    <input type="text" name="newItem">
+    <input type="submit" value="Add">
+  </form>
+</div>
+<hr>
 <div class="row">
   <div class="col-md-12">
-    <h2>Items</h2>
+    <h2>To-do list</h2>
     <ul class="list-group mb-4">
       {% for item in items %}
-      <li>{{ item }}</li>
+      <li>{{ item.title }}</li>
       {% endfor %}
     </ul>
   </div>
