--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -17,11 +17,16 @@
 <div class="row">
   <div class="col-md-12">
     <h2>To-do list</h2>
-    <ul class="list-group mb-4">
+  </div>
+  <div class="col-md-12">
+    <table style="width:350pt">
       {% for item in items %}
-      <li>{{ item.title }}</li>
+      <tr>
+        <td>{{ item.title }}</td>
+        <td>{{ item.status }}</td>
+      </tr>
       {% endfor %}
-    </ul>
+    </table>
   </div>
 </div>
 {% endblock %}
