Added update of to-do item status to complete

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -24,6 +24,7 @@
       <tr>
         <td>{{ item.title }}</td>
         <td>{{ item.status }}</td>
+        <td><a href="{{ url_for('complete',id=item.id) }}">Mark as Complete!</a></td>
       </tr>
       {% endfor %}
     </table>
