--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -2,23 +2,21 @@
 {% block title %}To-Do App{% endblock %}
 
 {% block content %}
+
 <div class="jumbotron">
   <h1 class="display-4">To-Do App</h1>
   <p class="lead">Just another to-do app.</p>
 </div>
 
-<div>
-  <form action="{{url_for('add')}}" method="POST">
-    <input type="text" name="newItem">
-    <input type="submit" value="Add">
-  </form>
-</div>
-<hr>
 <div class="row">
   <div class="col-md-12">
     <h2>To-do list</h2>
   </div>
-  <div class="col-md-12">
+</div>
+
+<div class="row">
+
+  <div class="col-md-7">
     <table style="width:350pt">
       {% for item in items %}
       <tr>
@@ -29,5 +27,30 @@
       {% endfor %}
     </table>
   </div>
+
+  <div class="col-md-5">
+
+    <form action="{{url_for('add')}}" method="POST">
+      <div class="form-row">
+        <div class="col-9">
+          <input type="text" name="newItem" class="form-control" placeholder="... enter new task here!">
+        </div>
+        <div class="col-2">
+          <input class="btn btn-primary" type="submit" value="Add Task">
+        </div>
+      </div>
+    </form>
+
+    <hr>
+
+    <div>
+      <form action="{{url_for('sort')}}">
+        <input type="submit" value="Sort Tasks" class="btn btn-warning" />
+      </form>
+    </div>
+
+  </div>
+
 </div>
+
 {% endblock %}
