Fixed issue resulting in the loss of the sorting preference made by the user

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -74,9 +74,9 @@
     <hr>
 
     <div>
-      <a class="btn btn-info" href="{{url_for('doneFirst')}}">Sort by Done</a>
-      <a class="btn btn-info" href="{{url_for('notDoneFirst')}}">Sort by Not Started</a>
-      <a class="btn btn-secondary" href="{{url_for('index')}}">Restore Order</a>
+      <a class="btn btn-info" href="{{ url_for('sort', order=1) }}">Sort by Done</a>
+      <a class="btn btn-info" href="{{ url_for('sort', order=2) }}">Sort by Not Started</a>
+      <a class="btn btn-secondary" href="{{ url_for('sort', order=0) }}">Restore Order</a>
     </div>
   </div>
 
