Refactored code introducing class Trello containing constant parameter for managing items

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -27,7 +27,7 @@
           {% for item in items %}
           <li class="list-group-item d-flex align-items-center" style="max-height: 30pt;">
 
-            {% if item.status == "0_to_do" %}
+            {% if item.status == "0_todo" %}
             <span>{{ item.name }}</span>
             <span>&nbsp</span>
             <span class="badge badge-secondary badge-pill">to do</span>
